bluec-tests/tests/valid/types_pointer/compare_pointer_to_zero.c
int main(void)
{
    int *x = 0;
    // Like clang/gcc, we allow this and emit a warning.
    return x > 0;
}