bluec-tests/tests/invalid/expr_cast/cast_to_function_type.c
int main(void) {
    // Cannot cast an expression to a function type.
    (int (void)) 0;
    return 0;
}